--- a/signup.html
+++ b/signup.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Signin</title>
+        <title>Sign up</title>
         <link rel="stylesheet" type="text/css" href="./css/main.css" />
         <style>
             .fold {
-                height: 625px;
+                height: 640px;
             }
         </style>
     </head>
@@ -19,7 +19,7 @@
                 <form action="" method="post">
                     <div class="form-group">
                         <label for="#email">Email:</label>
-                        <input type="text" name="email" id="email" required />
+                        <input type="email" name="email" id="email" required />
                     </div>
                     <div class="form-group">
                         <label for="#username">Username:</label>
@@ -33,7 +33,7 @@
                     <div class="form-group">
                         <label for="#password1">Password:</label>
                         <input
-                            type="text"
+                            type="password"
                             name="password1"
                             id="password1"
                             required
@@ -42,15 +42,60 @@
                     <div class="form-group">
                         <label for="#password2">Confirm password:</label>
                         <input
-                            type="text"
+                            type="password"
                             name="password2"
                             id="password2"
                             required
                         />
                     </div>
+                    <div class="color-dirt-green error-text">You</div>
                     <button class="btn-main" type="submit">Sign up</button>
                 </form>
             </div>
         </div>
+        <script>
+            document
+                .getElementById("btn-submit")
+                .addEventListener("click", function () {
+                    let email = document.getElementById("email").value;
+                    let username = document.getElementById("username").value;
+                    let password1 = document.getElementById("password1").value;
+                    let password2 = document.getElementById("password2").value;
+
+                    if (password1.length >= 8 && password1.length <= 16) {
+                        // Valid password length
+                    } else {
+                        // invalid string
+                        document.getElementsByClassName(
+                            "error-text"
+                        )[0].style.display = "block";
+                        document.getElementsByClassName(
+                            "error-text"
+                        )[0].innerText = "Invalid password length";
+                        setTimeout(function f() {
+                            document.getElementsByClassName(
+                                "error-text"
+                            )[0].style.display = "none";
+                        }, 5000);
+                    }
+
+                    if (password1 === password2) {
+                        // Passwords match
+                    } else {
+                        // Passwords don't match
+                        document.getElementsByClassName(
+                            "error-text"
+                        )[0].style.display = "block";
+                        document.getElementsByClassName(
+                            "error-text"
+                        )[0].innerText = "Passwords do not match";
+                        setTimeout(function f() {
+                            document.getElementsByClassName(
+                                "error-text"
+                            )[0].style.display = "none";
+                        }, 5000);
+                    }
+                });
+        </script>
     </body>
 </html>
